demo/traefik-v2/k8s/traefik/05_service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
spec:
  ports:
    - name: web
      port: 80
    - name: admin
      port: 8080
    - name: websecure
      port: 443
  selector:
    app: traefik-ingress-controller
  type: LoadBalancer
